public/desktopStyle.css
* {
    padding: 0;
    margin: 0;
}

body {
    border: none;
    background: #eee;
    color: #202020;
    text-align: center;
    font-family: "Roboto", sans-serif;
}

h1 {
    color: #5a5a5a;
}

.switchWrapper {
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 0;
    margin-bottom: 2em;
}

.switchLabel {
    margin-top: 0.5em;
    font-size: 12pt;
    font-weight: bolder;
}

.switchMode {
    position: relative;
    display: inline-block;
    width: 60px;
    height: 34px;
    margin-top: 0.5rem;
}


/* Hide default HTML checkbox */

.switchMode input {
    opacity: 0;
    width: 0;
    height: 0;
}

.slider {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: #ccc;
    -webkit-transition: .4s;
    transition: .4s;
}

.slider:before {
    position: absolute;
    content: "";
    height: 26px;
    width: 26px;
    left: 4px;
    bottom: 4px;
    background-color: white;
    -webkit-transition: .4s;
    transition: .4s;
}

input:checked+.slider {
    background-color: #2196F3;
}

input:focus+.slider {
    box-shadow: 0 0 1px #2196F3;
}

input:checked+.slider:before {
    -webkit-transform: translateX(26px);
    -ms-transform: translateX(26px);
    transform: translateX(26px);
}


/* Rounded sliders */

.slider.round {
    border-radius: 34px;
}

.slider.round:before {
    border-radius: 50%;
}

#startStopBtn {
    display: inline-block;
    margin: 0 auto;
    color: #6060AA;
    background-color: rgba(0, 0, 0, 0);
    border: 0.15em solid #6060FF;
    border-radius: 0.3em;
    transition: all 0.3s;
    box-sizing: border-box;
    width: 8em;
    height: 3em;
    line-height: 2.7em;
    cursor: pointer;
    box-shadow: 0 0 0 rgba(0, 0, 0, 0.1), inset 0 0 0 rgba(0, 0, 0, 0.1);
}

#startStopBtn:hover {
    box-shadow: 0 0 2em rgba(0, 0, 0, 0.1), inset 0 0 1em rgba(0, 0, 0, 0.1);
}

#startStopBtn.running {
    background-color: #FF3030;
    border-color: #FF6060;
    color: #FFFFFF;
}

#startStopBtn:before {
    content: "Start";
}

#startStopBtn.running:before {
    content: "Abort";
}

#test {
    margin-top: 2em;
    /*margin-bottom: 8em;*/
}

div.testArea {
    display: inline-block;
    width: 16em;
    height: 12.5em;
    position: relative;
    box-sizing: border-box;
}

div.testArea2 {
    display: inline-block;
    width: 14em;
    height: 7em;
    position: relative;
    box-sizing: border-box;
    text-align: center;
}

div.testArea div.testName {
    position: absolute;
    top: 0.1em;
    left: 0;
    width: 100%;
    font-size: 1.4em;
    z-index: 9;
}

div.testArea2 div.testName {
    display: block;
    text-align: center;
    font-size: 1.4em;
}

div.testArea div.meterText {
    position: absolute;
    bottom: 1.55em;
    left: 0;
    width: 100%;
    font-size: 2.5em;
    z-index: 9;
}

div.testArea2 div.meterText {
    display: inline-block;
    font-size: 2.5em;
}

div.meterText:empty:before {
    content: "0.00";
}

div.testArea div.unit {
    position: absolute;
    bottom: 2em;
    left: 0;
    width: 100%;
    z-index: 9;
}

div.testArea2 div.unit {
    display: inline-block;
}

div.testArea canvas {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 1;
}

div.testGroup {
    display: block;
    margin: 0 auto;
}

.footer {
    display: block;
    padding: 2em;
    margin-bottom: 2em;
}

.footer a {
    text-decoration: none;
}

